TEST_PROGRAMS/INVALID/yu_hua/a.min
var x: int;
var res: int;

x = res = 0;
